kustomize-demo/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: chad-cummings.com
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
    - hosts:
        - chad-cummings.com
      secretName: secure-nginx-cert
  rules:
    - host: chad-cummings.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx
                port:
                  number: 80
